man-db 2.9.0
============

Major changes since man-db 2.8.7:

	Compatibility notes:
	--------------------

	* Remove the ability to undefine COMP_SRC at build-time to disable
	  reading compressed manual pages.  This was always only a
	  micro-optimisation, and it wasn't worth the extra code complexity.
	  You can still configure without any compressors (either by not
	  having them available at build time, or by configuring with
	  "--with-gzip=" etc.) to achieve much the same practical effect,
	  although the test suite still requires at least gunzip.

man-db 2.8.7 (26 August 2019)
=============================

Major changes since man-db 2.8.6.1:

	Fixes:
	------

	* Further workarounds for ESET File Security: allow sendmsg when it
	  is in use.

	* The seccomp sandbox now causes disallowed system calls to return
	  EPERM rather than raising SIGSYS, in the hope of being less
	  disruptive to preload hacks.

	* Make seccomp sandbox allow getrandom, used by Hardened Malloc.

	* man no longer saves cat pages if --no-hyphenation or
	  --no-justification is used.

	* Move decompression code out of libman.  This should really fix a
	  link failure using the Darwin linker (unsuccessfully attempted in
	  2.8.6), and possibly on other platforms too.

	* Pass the database file name around in function parameters, rather
	  than storing it in a global variable with an unresolved symbol
	  from libmandb.  Like the previous item, this fixes a link failure
	  using the Darwin linker, and possibly on other platforms too.

	* Return database entries in sorted order when using NDBM.  (This is
	  based on a similar fix to the GDBM backend in man-db 2.4.2.)

	Improvements:
	-------------

	* Recognise Esperanto, Tamil, and Ukrainian translations of the NAME
	  section.

man-db 2.8.6.1 (5 August 2019)
==============================

Major changes since man-db 2.8.6:

	Fixes:
	------

	* Fix missing memory copies in ult_src that caused segfaults in
	  mandb.
