@@ -65,8 +65,11 @@ iconv -f UTF-8 -t ISO-8859-13 >"$tmpdir/5.inp" <<'EOF'
 REGISTERED SIGN: ®
 trailing data
 EOF
-iconv -f ISO-8859-7 -t UTF-8//IGNORE \
-	<"$tmpdir/5.inp" >"$tmpdir/5.exp" 2>/dev/null
+cat >"$tmpdir/5.exp" <<'EOF'
+'\" -*- coding: UTF-8
+EOF
+<"$tmpdir/5.inp" tail -n +2 | iconv -f ISO-8859-7 -t UTF-8//IGNORE \
+	>>"$tmpdir/5.exp" 2>/dev/null
 run $MANCONV -f UTF-8:ISO-8859-1 -t UTF-8//IGNORE \
 	<"$tmpdir/5.inp" >"$tmpdir/5.out"
 expect_pass 'copes with invalid input characters' \
