@@ -3,6 +3,12 @@ man-db 2.9.0
 
 Major changes since man-db 2.8.7:
 
+	Fixes:
+	------
+
+	* man --recode and manconv now adjust encoding declarations on the
+	  first line of their input to refer to the new encoding.
+
 	Compatibility notes:
 	--------------------
 
